新增—钻石客户

--- a/index.html
+++ b/index.html
@@ -1,67 +1,65 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width,initial-scale=1.0，minimum-scale=1,maximum-scale=1, user-scalable=no"
-    />
-    <meta name="format-detection" content="telephone=yes" />
-    <title>寻草记</title>
-    <link
-      rel="stylesheet"
-      href="https://res.wx.qq.com/open/libs/weui/1.1.3/weui.min.css"
-    />
-    <script
-      type="text/javascript"
-      src="https://res.wx.qq.com/open/libs/weuijs/1.1.4/weui.min.js"
-    ></script>
-    <!--<script type="text/javascript" src="http://res.wx.qq.com/open/js/jweixin-1.4.0.js"></script>-->
-    <style>
-      /*img{ pointer-events: none; }*/
-    </style>
-  </head>
-  <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-    <!--<script>-->
-    <!--wx.config({-->
-    <!--debug: true,-->
-    <!--appId: "wxad24c4e8056b32be",-->
-    <!--timestamp: "1559206901",-->
-    <!--nonceStr: "2e615d29d0c942bc947d00a8c1b93767",-->
-    <!--signature: "1a9430eb0100f11b6cb0a8bdcbf2daca6da02d23",-->
-    <!--jsApiList: [-->
-    <!--"onMenuShareAppMessage",-->
-    <!--"updateTimelineShareData",-->
-    <!--"updateAppMessageShareData"-->
-    <!--]-->
-    <!--});-->
-    <!--wx.ready (function () {-->
-    <!--wx.updateAppMessageShareData({-->
-    <!--title: "里约大冒险",-->
-    <!--desc: '超级刺激',-->
-    <!--link: "https://xuncaoji.yzsaas.cn2",-->
-    <!--imgUrl: 'http://pic49.nipic.com/file/20140927/18675274_005204700000_2.jpg',-->
-    <!--success: function (res) {-->
-    <!--alert("Update OK")-->
-    <!--}-->
-    <!--});-->
-    <!--// wx.onMenuShareAppMessage({-->
-    <!--//     title: "标题",-->
-    <!--//     desc: '内容描述',-->
-    <!--//     link: "https://xuncaoji.yzsaas.cn",-->
-    <!--//     imgUrl: 'http://pic49.nipic.com/file/20140927/18675274_005204700000_2.jpg',-->
-    <!--//     type: "",-->
-    <!--//     dataUrl: "",-->
-    <!--//     success: function () {-->
-    <!--//         alert("Shared");-->
-    <!--//     }-->
-    <!--// });-->
-    <!--});-->
-    <!--wx.error(function(res){-->
-    <!--alert("error!");-->
-    <!--});-->
-    <!--</script>-->
-  </body>
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport"
+    content="width=device-width,initial-scale=1.0，minimum-scale=1,maximum-scale=1, user-scalable=no" />
+  <meta name="format-detection" content="telephone=yes" />
+  <title>寻草记</title>
+  <link rel="stylesheet" href="https://res.wx.qq.com/open/libs/weui/1.1.3/weui.min.css" />
+  <script type="text/javascript" src="https://res.wx.qq.com/open/libs/weuijs/1.1.4/weui.min.js"></script>
+  <!--<script type="text/javascript" src="http://res.wx.qq.com/open/js/jweixin-1.4.0.js"></script>-->
+  <style>
+    /*img{ pointer-events: none; }*/
+    .van-tab {
+      flex-basis: 40% !important;
+    }
+  </style>
+</head>
+
+<body>
+  <div id="app"></div>
+  <!-- built files will be auto injected -->
+  <!--<script>-->
+  <!--wx.config({-->
+  <!--debug: true,-->
+  <!--appId: "wxad24c4e8056b32be",-->
+  <!--timestamp: "1559206901",-->
+  <!--nonceStr: "2e615d29d0c942bc947d00a8c1b93767",-->
+  <!--signature: "1a9430eb0100f11b6cb0a8bdcbf2daca6da02d23",-->
+  <!--jsApiList: [-->
+  <!--"onMenuShareAppMessage",-->
+  <!--"updateTimelineShareData",-->
+  <!--"updateAppMessageShareData"-->
+  <!--]-->
+  <!--});-->
+  <!--wx.ready (function () {-->
+  <!--wx.updateAppMessageShareData({-->
+  <!--title: "里约大冒险",-->
+  <!--desc: '超级刺激',-->
+  <!--link: "https://xuncaoji.yzsaas.cn2",-->
+  <!--imgUrl: 'http://pic49.nipic.com/file/20140927/18675274_005204700000_2.jpg',-->
+  <!--success: function (res) {-->
+  <!--alert("Update OK")-->
+  <!--}-->
+  <!--});-->
+  <!--// wx.onMenuShareAppMessage({-->
+  <!--//     title: "标题",-->
+  <!--//     desc: '内容描述',-->
+  <!--//     link: "https://xuncaoji.yzsaas.cn",-->
+  <!--//     imgUrl: 'http://pic49.nipic.com/file/20140927/18675274_005204700000_2.jpg',-->
+  <!--//     type: "",-->
+  <!--//     dataUrl: "",-->
+  <!--//     success: function () {-->
+  <!--//         alert("Shared");-->
+  <!--//     }-->
+  <!--// });-->
+  <!--});-->
+  <!--wx.error(function(res){-->
+  <!--alert("error!");-->
+  <!--});-->
+  <!--</script>-->
+</body>
+
 </html>
