--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <title>寻草记</title>
   <link rel="stylesheet" href="https://res.wx.qq.com/open/libs/weui/1.1.3/weui.min.css" />
   <script type="text/javascript" src="https://res.wx.qq.com/open/libs/weuijs/1.1.4/weui.min.js"></script>
+  <!-- <script src="https://res.wx.qq.com/open/js/jweixin-1.4.0.js"></script> -->
   <!--<script type="text/javascript" src="http://res.wx.qq.com/open/js/jweixin-1.4.0.js"></script>-->
   <style>
     /*img{ pointer-events: none; }*/
